--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "build:android": "npm run build"
   },
   "dependencies": {
     "@iconify/vue": "^4.3.0",
     "axios": "^1.7.9",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/android": "^5.0.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-loading-overlay": "^6.0.6",
@@ -26,6 +29,7 @@
     "eslint-plugin-vue": "^9.30.0",
     "prettier": "^3.3.3",
     "vite": "^6.0.1",
-    "vite-plugin-vue-devtools": "^7.6.5"
+    "vite-plugin-vue-devtools": "^7.6.5",
+    "@capacitor/cli": "^5.0.0"
   }
 }
