--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,9 +10,8 @@ workflows:
       - name: Install dependencies
         script: |
           npm install
-          npm install -D typescript @types/node
           npm install @capacitor/core @capacitor/cli @capacitor/android
-          npx cap init OxygeTV com.oxygetv.app
+          npx cap init OxygeTV com.oxygetv.app --web-dir=dist
       
       - name: Build
         script: npm run build
