--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -50,24 +50,23 @@ workflows:
       - name: Update Gradle Config
         script: |
           if [ -f "android/app/build.gradle" ]; then
-            cat << 'EOF' >> android/app/build.gradle
-
-android {
-    signingConfigs {
-        release {
-            storeFile file("../keystore.jks")
-            storePassword System.getenv("CM_KEYSTORE_PASSWORD")
-            keyAlias "upload"
-            keyPassword System.getenv("CM_KEY_PASSWORD")
-        }
-    }
-    buildTypes {
-        release {
-            signingConfig signingConfigs.release
-        }
-    }
-}
-EOF
+            echo '
+              android {
+                  signingConfigs {
+                      release {
+                          storeFile file("../keystore.jks")
+                          storePassword System.getenv("CM_KEYSTORE_PASSWORD")
+                          keyAlias "upload"
+                          keyPassword System.getenv("CM_KEY_PASSWORD")
+                      }
+                  }
+                  buildTypes {
+                      release {
+                          signingConfig signingConfigs.release
+                      }
+                  }
+              }
+            ' >> android/app/build.gradle
           else
             echo "Error: build.gradle not found"
             exit 1
