--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -50,60 +50,8 @@ workflows:
       - name: Update Gradle Config
         script: |
           if [ -f "android/app/build.gradle" ]; then
-            # Сохраняем оригинальный файл
             cp android/app/build.gradle android/app/build.gradle.bak
-            
-            # Создаем временный файл с конфигурацией
-            tee android/app/build.gradle > /dev/null << "ENDCONFIG"
-apply plugin: 'com.android.application'
-
-android {
-    namespace "com.oxygetv.app"
-    compileSdkVersion 33
-    defaultConfig {
-        applicationId "com.oxygetv.app"
-        minSdkVersion 21
-        targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    signingConfigs {
-        release {
-            storeFile file("../keystore.jks")
-            storePassword System.getenv("CM_KEYSTORE_PASSWORD")
-            keyAlias "upload"
-            keyPassword System.getenv("CM_KEY_PASSWORD")
-        }
-    }
-
-    buildTypes {
-        release {
-            signingConfig signingConfigs.release
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-}
-
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.6.1"
-    implementation "androidx.core:core-ktx:1.9.0"
-    testImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.test.ext:junit:1.1.5"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
-    implementation project(':capacitor-android')
-    implementation project(':capacitor-cordova-android-plugins')
-}
-ENDCONFIG
-
+            cp build.gradle.template android/app/build.gradle
             echo "=== New build.gradle contents ==="
             cat android/app/build.gradle
           else
