--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@capacitor/status-bar": "6.0.2",
     "@iconify/vue": "^4.3.0",
     "axios": "^1.7.9",
+    "firebase": "^11.2.0",
     "pinia": "^2.3.0",
+    "swiper": "^11.2.1",
     "vue": "^3.5.13",
     "vue-loading-overlay": "^6.0.6",
     "vue-router": "^4.5.0"
